<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/cadastrar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.518"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginTop="56dp"
      android:text="@string/login"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextUser"
      android:layout_width="287dp"
      android:layout_height="49dp"
      android:layout_marginTop="10dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintStart_toStartOf="@+id/textView2"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:text="@string/password"
      app:layout_constraintStart_toStartOf="@+id/editTextUser"
      app:layout_constraintTop_toBottomOf="@+id/editTextUser" />

  <EditText
      android:id="@+id/editTextTextPassword"
      android:layout_width="286dp"
      android:layout_height="50dp"
      android:layout_marginTop="10dp"
      android:ems="10"
      android:inputType="textPassword"
      app:layout_constraintStart_toStartOf="@+id/textView3"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <Button
      android:id="@+id/buttonLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/confirmar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>